[package]
name = "martian"
version = "0.1.3"
edition = "2021"
authors = ["Jan Piotrzkowski <piotrzkowski.dev@gmail.com>"]
license = "Apache-2.0"
description = "A Rust library providing Mars centric utility modules like: time etc."
repository = "https://github.com/babilonczyk/martian"
homepage = "https://github.com/babilonczyk/martian"
readme = "README.md"
keywords = ["astronomy", "utility", "date-time", "mars", "time"]
categories = ["aerospace", "date-and-time", "science", "internationalization"]

[lib]
name = "martian"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
hifitime = { version = "4.0.0", optional = true }
thiserror = { version = "1.0.67", optional = true }
regex = { version = "1.11.1", optional = true }

[features]
default = ["time"]
time = ["hifitime", "thiserror", "regex"]